website/docs/v0.17.0/zh/reference/cli.mdx
---
title: CLI 命令与稳定契约
description: 按任务查找 Agent 会话、ACL、provider、分布式运行、界面能力和退出码。
---

:::warning 发布候选
v0.17.0 已在 main 上准备完成，但尚未正式发布。安装示例仍固定到 v0.16.2，直到发布门禁被明确推进。
:::

# CLI 命令与稳定契约

这页按任务整理 A3S Test 的稳定命令与返回约定。第一次使用先运行能力发现命令，再根据当前任务进入 Agent 会话、ACL 套件或分布式执行。

## 发现能力

这些命令直接输出已安装协议和调度边界，不根据文档猜测本机能力。

```bash
a3s-test capabilities --json
a3s-test agent schema
a3s-test provider schema contract-generation
a3s-test provider schema design-audit
a3s-test provider schema llm
a3s-test provider schema visual-grounding
a3s-test worker schema
a3s-test worker inventory
a3s-test worker remote schema
a3s-test worker artifacts schema
a3s-test distributed schema
```

Provider schema 描述请求、响应、来源和权限字段，不代表仓库捆绑了某个推理后端。

## Agent 会话

| 命令                              | 作用                                              |
| --------------------------------- | ------------------------------------------------- |
| `agent start`                     | 创建持久 Web 会话，声明目标、成功条件和策略边界。 |
| `agent observe`                   | 返回新观察、语义引用和 `observation_id`。         |
| `agent click`、`fill`、`press` 等 | 执行绑定最新观察的紧凑动作。                      |
| `agent act --action-json`         | 执行完整生成式动作 Schema。                       |
| `agent screenshot`                | 在会话 artifact 根中保存受约束 PNG。              |
| `agent ground`                    | 请求视觉定位候选，不执行点击。                    |
| `agent audit`                     | 请求建议式设计审计，不改变 verdict。              |
| `agent finish`                    | 写入终态报告并关闭自有界面。                      |
| `agent abort`                     | 取消会话并执行有界清理。                          |

`agent open` 是 `agent start` 的别名，`agent snapshot` 是 `agent observe` 的别名。

### 创建会话时的关键选项

```bash
a3s-test agent start http://127.0.0.1:3000/checkout \
  --session checkout \
  --goal "Complete checkout" \
  --success "The confirmation heading is visible" \
  --allow-origin http://127.0.0.1:3001 \
  --browser-driver standalone \
  --json
```

| 选项                     | 默认值或要求 | 作用                                                |
| ------------------------ | ------------ | --------------------------------------------------- |
| `--session`              | 必填         | 工作区内稳定且唯一的会话标识                        |
| `--goal`                 | 必填         | 编码 Agent 要完成的具体目标                         |
| `--success`              | 至少一个     | 可以重复声明的可观察成功条件                        |
| `--allow-origin`         | 初始 origin  | 增加可导航和可观察的精确 origin                     |
| `--allow-domain`         | 无           | 增加浏览器网络 hostname，不扩大动作 origin          |
| `--browser-driver`       | `a3s`        | 选择 `a3s` 或兼容 `standalone` adapter              |
| `--browser-executable`   | 自动发现     | 为选定 adapter 指定可执行文件                       |
| `--command-timeout-ms`   | 25,000       | 每条浏览器命令的 deadline                           |
| `--idle-timeout-ms`      | 300,000      | Agent 两轮之间允许的浏览器 daemon 空闲时间          |
| `--browser-microphone`   | `disabled`   | 可显式选择 deterministic synthetic microphone       |
| `--headed`               | 关闭         | 显示浏览器窗口，只用于明确的本地调试                |
| `--auto-resolve-repairs` | 关闭         | 验证全部通过后自动从 `review_ready` 进入 `resolved` |

自动解决是 session 级选择。验证失败、缺少新 ready 修订或证据不完整时不会自动进入 `resolved`。

### 紧凑动作命令

紧凑命令适合常见的一步操作。

```bash
a3s-test agent click @e3 \
  --session checkout \
  --observation 7 \
  --json

a3s-test agent fill @e4 "tester@example.test" \
  --session checkout \
  --observation 8 \
  --json

a3s-test agent press Enter --session checkout --json
a3s-test agent viewport 390 844 --session checkout --json
a3s-test agent screenshot screenshots/confirmation.png \
  --session checkout \
  --json
```

可用紧凑命令包括 `click`、`hover`、`focus`、`double-click`、`context-click`、`fill`、`type`、`insert-text`、`check`、`uncheck`、`select`、`drag`、`press`、`wheel`、`viewport` 和 `screenshot`。动作需要 ref 时，必须同时传入生成该 ref 的最新 observation ID。

### 完整 Action JSON

标签页、frame、dialog、网络、等待、断言和高级证据使用 `agent act`。

```bash
a3s-test agent act \
  --session checkout \
  --action-json '{"type":"wait","condition":{"type":"text","value":"Order confirmed"}}' \
  --json
```

先用 `a3s-test agent schema` 获取修订 15 的完整 JSON Schema。当前动作类型如下。

| 类别       | `type` 值                                                                                                        |
| ---------- | ---------------------------------------------------------------------------------------------------------------- |
| 页面状态   | `navigate`、`snapshot`、`viewport`、`tab`、`frame`、`dialog`                                                     |
| 指针与表单 | `click`、`hover`、`focus`、`double_click`、`context_click`、`fill`、`type`、`check`、`uncheck`、`select`、`drag` |
| 键盘与终端 | `insert_text`、`press`、`wheel`、`terminal_paste`、`terminal_resize`、`terminal_recording`                       |
| 同步       | `wait`、`assert`                                                                                                 |
| 文件与网络 | `upload`、`download`、`network_route`、`network_unroute`                                                         |
| 证据       | `screenshot`、`har`、`trace`、`video`、`accessibility`、`console`、`page_errors`                                 |

`insert_text` 复用已建立的编辑上下文，不接收新目标。`terminal_*` 只在 TUI surface 合法。未知字段和当前 surface 不支持的动作会在派发前拒绝。

### Test Kit inspection

```bash
a3s-test agent inspect \
  --session checkout \
  --component checkout-form \
  --detail forensic \
  --limit 100 \
  --json
```

`--detail` 接受 `summary`、`scoped`、`diff` 与 `forensic`。范围可以是 page、一个当前私有 node、component，或 `viewport,x,y,width,height` 与 `document,x,y,width,height` 形式的 region。响应带 `cursor` 时，下一次 inspection 必须保持相同 session、scope 与页面修订。

### Repair Ledger 命令

| 阶段       | 命令                           | 关键参数和结果                                                     |
| ---------- | ------------------------------ | ------------------------------------------------------------------ |
| 提取       | `repair-watch`                 | `--limit` 默认 20，`--timeout-ms` 默认 30,000，批次窗口默认 250 ms |
| 领取       | `repair-claim`                 | finding ID、幂等 request ID、attempt ID 与默认五分钟 lease         |
| 开始编辑   | `repair-progress`              | attempt ID 必须匹配，状态进入 `repairing`                          |
| 请求澄清   | `repair-reply`                 | 保存消息并进入 `needs_input`                                       |
| 完成编辑   | `repair-complete`              | 进入 A3S Test 拥有的 `verifying`，不声明 resolved                  |
| 运行验证   | `repair-verify`                | success criteria、changed files、checks JSON 与可选 ACL candidate  |
| 失败或取消 | `repair-fail`、`repair-cancel` | 追加终止事件并保留 attempt 历史                                    |

每次状态变化都需要新的幂等 request ID。claim 返回的 attempt ID 要沿用到 progress、reply、complete 和 fail。`repair-verify` 必须针对更新后的 ready 页面修订。

### 会话终态与文件

```bash
a3s-test agent finish \
  --session checkout \
  --status passed \
  --summary "Checkout completed and confirmation was observed" \
  --json
```

持久会话默认保存在当前工作区的 `.a3s-test/agent-sessions/<session>/`。`events.jsonl` 是追加式事件记录，`report.json` 是终态结果，`artifacts/` 只允许相对证据路径。`finish` 用于已经得到 passed 或 failed 结论的会话；无法安全继续时使用精确 `abort`。

## 契约与 provider

```bash
a3s-test contract generate \
  --config tests/contracts/checkout.generate.acl \
  --output tests/contracts/checkout.draft.json

a3s-test contract review \
  --draft tests/contracts/checkout.draft.json \
  --review tests/contracts/checkout.review.acl \
  --output tests/contracts/checkout.acl \
  --audit tests/contracts/checkout.reviewed.json
```

`contract generate` 只写 candidate draft。`contract review` 重新校验来源、评审动作和冲突后才发布规范 ACL。视觉定位与设计审查分别通过 `agent ground` 和 `agent audit` 调用部署方 provider，返回建议而不执行页面动作。

## ACL 与分布式运行

```bash
a3s-test check <suite.acl> --json
a3s-test run <suite.acl> --json
a3s-test distributed plan <distributed.acl> --compact
a3s-test distributed run <distributed.acl> --json
```

远程 worker 使用独立的 `a3s.test.remote-worker/3` 执行协议和 `a3s.test.remote-artifacts/1` artifact 协议。请求不能选择 executable、应用、后端、凭据或网络策略，这些必须由部署启动参数固定。

`check` 只做准入，不启动界面。`run` 在准入后执行 suite，并把产品失败、测试规范错误、基础设施错误和清理错误分开写入机器结果。`distributed plan` 先匹配 worker 能力，`distributed run` 才发送鉴权 shard。

### ACL 控件状态断言

Action 协议修订 8 新增以下 `expect` 条件。

```acl
expect "name" {
    target = label("Display name")
    value = "Ada"
}

expect "submit" { disabled = role("button", "Submit") }
expect "terms" { checked = label("Accept terms") }
expect "review" { selected = role("option", "Review") }

expect "status" {
    target = role("listbox", "Publication status")
    selected_values = ["review", "published"]
}
```

`value` 与 `selected_values` 需要单独配置 `target`。布尔状态包括 `enabled`/`disabled`、`checked`/`unchecked` 和 `selected`/`unselected` 三组。预期选项不得重复；期望值与实际值都会排序后按精确集合比较。`[]` 可以通过准入，含义是观察到真实的空选择。

布尔状态通过时会在 `output.data` 下返回以下结构。

```json
{
  "target": { "type": "role", "role": "button", "name": "Submit" },
  "state": "enabled",
  "expected": false,
  "actual": false
}
```

值和已选值集合也会返回 `target`、`expected` 与 `actual`，其中选项数组使用规范顺序。配置 `stable_for_ms` 后，Runner 会重复同一个类型化断言，并增加常规的 `assertion` 与 `stability` 证据。

| 错误码                                                                                   | 含义                                       |
| ---------------------------------------------------------------------------------------- | ------------------------------------------ |
| `test.spec.condition_ambiguous`                                                          | 同时配置了多个 expectation 条件            |
| `test.spec.attribute_required`                                                           | `value` 或 `selected_values` 缺少 `target` |
| `test.spec.selected_value_duplicate`                                                     | 预期选项出现重复值                         |
| `test.driver.web.target_not_found`                                                       | 没有匹配目标，绝不能借此证明负向状态       |
| `test.driver.web.target_ambiguous`                                                       | 匹配到多个目标                             |
| `test.driver.web.state_unsupported`                                                      | 目标或 standalone ref 协议没有暴露所需状态 |
| `test.driver.web.output_invalid`                                                         | 浏览器输出类型错误，或实际选项包含重复值   |
| `test.assert.value`                                                                      | 观察到的精确值不同                         |
| `test.assert.enabled`、`.disabled`、`.checked`、`.unchecked`、`.selected`、`.unselected` | 观察到的布尔状态不同                       |
| `test.assert.selected_values`                                                            | 观察到的精确选项集合不同                   |

Web 读取实时 DOM 状态，原生 checkbox/radio 属性优先于 ARIA。GUI 只有在 CUA 确实返回 value 时支持精确值；布尔状态和多选状态会以 `test.driver.gui.assertion_unsupported` 拒绝。TUI 仍然只支持可见终端文本。Page Context ref 会在派发前解析；直接 standalone ref 还不能暴露原生 option 选择或多选数组。

### 焦点归属 ACL 断言

Action 协议修订 13 新增四种稳定目标条件。

```acl
expect "checkout-focused" { focused = role("button", "Checkout") }
expect "cancel-unfocused" { unfocused = testid("cancel") }
expect "dialog-owns-focus" { focus_within = role("dialog", "Checkout") }
expect "page-does-not-own-focus" { focus_outside = testid("page-shell") }
```

`focused` 把目标与当前 document 和嵌套开放 Shadow DOM 中可观察到的最深 active element 比较。`focus_within` 还会沿 assigned slot、DOM 父级与 Shadow host 检查渲染扁平树祖先。两种负向形式只在目标解析成功后比较同一份实时证据。元素缺失绝不能证明 `unfocused` 或 `focus_outside`。

| 错误码                                                                       | 边界                                   |
| ---------------------------------------------------------------------------- | -------------------------------------- |
| `test.spec.focus_target_unstable`                                            | ACL 目标是 browser ref 或 visual point |
| `test.driver.web.target_not_found`、`.target_ambiguous` 或 `.target_invalid` | 稳定目标解析失败，无法比较焦点         |
| `test.driver.web.state_unsupported`                                          | 程序化 standalone ref 请求实时焦点归属 |
| `test.assert.focused` 或 `.unfocused`                                        | 已解析元素的精确焦点归属不同           |
| `test.assert.focus_within` 或 `.focus_outside`                               | 已解析扁平树范围的焦点归属不同         |
| `test.assert.unstable`                                                       | 后续采样推翻了首次通过的焦点断言       |

语义定位器穿透开放 Shadow DOM，并排除可访问性隐藏的 composed ancestry，包括隐藏的 slot wrapper。CSS 保持当前 document 查询语义。GUI 与 TUI 没有等价归属证据时明确关闭失败。当前检入覆盖 600/600 个确定性 Web 分类、200/200 个持续窗口、200/200 个瞬态窗口，以及 standalone Chromium 中 17 个正向断言和 11 个负向或驱动错误分类。

### 实时语义状态 ACL 断言

Action 协议修订 14 新增五组彼此独立的正向与负向状态。

```acl
expect "filters-open" { expanded = testid("filters") }
expect "pin-off" { unpressed = role("button", "Pin") }
expect "name-locked" { readonly = label("Display name") }
expect "email-required" { required = placeholder("Email") }
expect "email-invalid" { invalid = css("#email") }
```

完整配对为 `expanded`/`collapsed`、`pressed`/`unpressed`、`readonly`/`writable`、`required`/`optional` 和 `invalid`/`valid`。状态适用时以原生属性为准，包括 `<details>.open`、原生只读与必填属性，以及 `willValidate` 为 true 时的 Constraint Validation。ARIA 回退只接受精确布尔值；`aria-invalid` 还会把 `grammar` 和 `spelling` 映射为 invalid。混合按压状态、未知 token 和缺失状态属于 unsupported，不会被当成 false。

| 错误码                                                                                                                                     | 边界                                                       |
| ------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------- |
| `test.spec.semantic_state_target_unstable`                                                                                                 | ACL 目标是 browser ref 或 visual point                     |
| `test.driver.web.target_not_found`、`.target_ambiguous` 或 `.target_invalid`                                                               | 稳定目标解析失败，绝不能借此证明负向状态                   |
| `test.driver.web.state_unsupported`                                                                                                        | 目标、token、surface 或程序化 browser ref 无法提供权威状态 |
| `test.assert.expanded`、`.collapsed`、`.pressed`、`.unpressed`、`.readonly`、`.writable`、`.required`、`.optional`、`.invalid` 或 `.valid` | 唯一目标暴露了明确布尔值，但与请求条件不同                 |
| `test.assert.unstable`                                                                                                                     | 后续合法采样推翻了首次通过的语义状态断言                   |

`writable` 不蕴含 `enabled`，产品要求真正可编辑时应组合两者。当前 Page Context ref 可以在派发前解析为稳定定位器。语义定位器穿透开放 Shadow DOM，并排除可访问性隐藏祖先；CSS 保持当前 document 语义。GUI 与 TUI 明确关闭失败。当前检入证据覆盖 1,000/1,000 个确定性 Web 分类、100/100 个持续窗口、100/100 个瞬态窗口，以及 standalone Chromium 中 27 个正向断言和 17 个负向或驱动错误分类。

### 渲染文本、有序序列与可见数量 ACL 断言

Action 协议修订 9 把预期文案绑定到唯一目标，并观察稳定定位器产生的完整可见数量。修订 10 新增精确的有序渲染文本向量。

```acl
expect "total-copy" {
    target = testid("total")
    rendered_text = "Total $42.00"
}

expect "visible-rows" {
    target = css("[data-row]")
    visible_count = 3
}

expect "line-items" {
    target = css("[data-line-item]")
    rendered_texts = ["Keyboard × 1", "Mouse × 2", "Shipping", "Shipping"]
}

expect "no-line-items" {
    target = css("[data-missing-line-item]")
    rendered_texts = []
}

expect "no-errors" {
    target = role("alert", "Checkout error")
    visible_count = 0
}
```

`rendered_text` 必须解析到唯一可见目标。比较前会去掉两端空白，并把连续空白折叠成一个空格。目标缺失或歧义仍是驱动错误；只有已经观察到的文案不同才返回 `test.assert.rendered_text`。

`visible_count` 接受语义或 CSS 定位器，并把完整可见匹配集合与非负整数比较。空集合是有证据的零。ACL 会以 `test.spec.visible_count_target_unstable` 拒绝 `ref()` 与 `visual_point()`，因为它们都不能表示可重复解析的集合。非法 CSS selector 仍是 `test.driver.web.target_invalid`；已观察数量不同才是 `test.assert.visible_count`。

`rendered_texts` 接受稳定语义或 CSS 定位器，对每个可见匹配独立规范化，并在不排序、不去重的前提下比较完整向量。空匹配集合会被观察成 `[]`，顺序与重复字符串都有意义。ACL 会以 `test.spec.rendered_texts_target_unstable` 拒绝 ref 与 visual point。预期和实际向量在 ACL 与 Web 驱动两端都限制为最多 256 项。非法 selector 与超限仍是驱动错误；已观察向量不同时才是 `test.assert.rendered_texts`。

| 错误码                                     | 边界                                 |
| ------------------------------------------ | ------------------------------------ |
| `test.spec.rendered_texts_target_unstable` | ACL 目标是 ref 或 visual point       |
| `test.spec.rendered_texts_limit`           | ACL 预期向量超过 256 项              |
| `test.driver.web.expectation_invalid`      | 类型化调用方绕过 ACL 传入超限预期    |
| `test.driver.web.collection_limit`         | 页面或不可信驱动响应产生超过 256 项  |
| `test.assert.rendered_texts`               | 有界观察向量的内容、重复项或顺序不同 |

| 定位平面 | 匹配与可见性语义                                                                                                                                                                      |
| -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| CSS      | 只查询当前 document。目标必须有正几何与 client rect，且组合祖先不能 hidden、display-none、visibility-hidden/collapsed 或完全透明。单独的 `aria-hidden` 不会移除视觉像素，所以仍计数。 |
| 语义     | role、text、test ID、label 与 placeholder 会穿透开放 Shadow DOM；除同样的渲染检查外，还排除可访问性隐藏祖先。                                                                         |

两种平面都排除零几何元素，但都不声称目标处于 viewport 内或没有被其他像素遮挡。当前浏览器 ref 可以标识唯一 `rendered_text` 元素，却不能表示 `visible_count` 或 `rendered_texts` 集合。GUI 与 TUI 对三种条件都明确关闭失败。

三种条件都支持 `stable_for_ms`。后续标量文案、有序向量或数量不匹配变为 `test.assert.unstable`；驱动失败保留原错误码。修订 9 覆盖 600/600 个确定性标量文案与数量分类，修订 10 新增 600/600 个有序向量分类。组合稳定性证据覆盖 300/300 个持续一致窗口与 300/300 个瞬态窗口，以及真实 Chromium CLI 中 12 个正向观察、12 个负向分类、三个通过与三个被拒绝的 100 ms 窗口和零私有 runtime 泄漏。

### 渲染布局 ACL 断言

Action 协议修订 11 比较两个稳定目标的渲染几何。

```acl
expect "checkout-below-summary" {
    target = testid("checkout")
    relative_to = role("region", "Order summary")
    layout = "below"
    tolerance_px = 1
    stable_for_ms = 300
    sample_interval_ms = 25
}
```

`target`、`relative_to` 与 `layout` 都是必填项。两个目标都接受 role、text、test ID、label、placeholder 或 CSS 定位器。ACL 会以 `test.spec.layout_target_unstable` 拒绝 `ref()` 与 `visual_point()`；两者绑定一次观察，不能在稳定窗口中重新解析。当前 Page Context ref 在两个目标都解析为稳定定位器后仍可使用。`tolerance_px` 默认为零，只接受不超过 1,024 的整数。

| 分组 | 关系                                                                                                     | 比较规则                                               |
| ---- | -------------------------------------------------------------------------------------------------------- | ------------------------------------------------------ |
| 方向 | `above`、`below`、`left_of`、`right_of`                                                                  | 边界侵入不能超过容差                                   |
| 包含 | `contains`、`inside`                                                                                     | 每条包含边界最多允许容差范围的偏差                     |
| 相交 | `overlaps`、`not_overlapping`                                                                            | 相交时两个轴都必须大于容差；不相交只需一个轴不超过容差 |
| 对齐 | `aligned_left`、`aligned_right`、`aligned_top`、`aligned_bottom`、`aligned_center_x`、`aligned_center_y` | 边缘或中心绝对差不超过容差                             |
| 尺寸 | `same_width`、`same_height`、`same_size`                                                                 | 宽或高的绝对差不超过容差                               |

Web 在一次页面求值中解析两个目标并采集两个矩形。CSS 使用视觉渲染可见性，因此仅设置 `aria-hidden` 但仍有像素的元素仍可测量；语义定位器还会排除可访问性隐藏祖先，并穿透开放 Shadow DOM。通过载荷返回两个目标、两个矩形、关系、容差与 `matched = true`。

| 错误码                              | 边界                                       |
| ----------------------------------- | ------------------------------------------ |
| `test.spec.layout_target_unstable`  | 任一 ACL 目标是 ref 或 visual point        |
| `test.spec.layout_relation_unknown` | `layout` 不属于封闭的 17 种关系词表        |
| `test.spec.layout_tolerance_limit`  | ACL 容差超过 1,024 像素                    |
| `test.driver.web.target_not_found`  | 任一稳定目标没有合格匹配                   |
| `test.driver.web.target_ambiguous`  | 任一稳定目标存在多个合格匹配               |
| `test.driver.web.target_invalid`    | 任一 CSS selector 非法                     |
| `test.driver.web.output_invalid`    | 任一矩形或不可信结果信封畸形或超出几何边界 |
| `test.assert.layout`                | 两个合法矩形违反指定关系                   |
| `test.assert.unstable`              | 初次匹配后，后续稳定性样本违反关系         |

GUI 要求两个 frame 来自同一份新鲜 CUA snapshot。TUI 返回明确的不支持错误。稳定性输出保留首次与末次完整双矩形载荷；后续解析或几何失败仍由驱动负责。当前检入证据覆盖 3,400/3,400 个确定性案例、100/100 个持续窗口通过、100/100 个瞬态窗口拒绝、全部 17 种关系，以及 standalone Chromium 中 25 个正向断言和 15 个负向或错误分类，同时完成精确清理。

### visual viewport 覆盖率与指针命中 ACL 断言

Action 协议修订 12 区分目标与 visual viewport 相交，以及指针命中测试能否到达目标。修订 15 新增有界覆盖率阈值。

```acl
expect "checkout-in-view" {
    in_viewport = testid("checkout")
}

expect "checkout-mostly-visible" {
    target = testid("checkout")
    viewport_coverage_at_least = 80
}

expect "drawer-mostly-outside" {
    target = css("#drawer")
    viewport_coverage_at_most = 10
}

expect "checkout-pointer-hit" {
    pointer_reachable = role("button", "Checkout")
    stable_for_ms = 300
    sample_interval_ms = 25
}
```

`in_viewport` 要求正面积相交。部分进入视口的目标会通过，并返回零到一之间的 `intersection_ratio`；完全离屏或只有边界接触会失败。覆盖率等于相交面积除以完整目标面积。`viewport_coverage_at_least` 接受 1 到 100，`viewport_coverage_at_most` 接受 0 到 99，两个被排除的端点会导致恒真断言。`pointer_reachable` 在裁剪后的目标矩形上使用确定性 3×3 网格，至少一个深层命中到达目标或其 composed-tree 后代时通过。覆盖率不证明无遮挡，所有写法都不证明 enabled 状态、键盘可达性、事件处理或产品意图。

所有写法都接受稳定的 role、text、test ID、label、placeholder 或 CSS 定位器。ACL 拒绝 ref 和 visual point；当前 Page Context ref 可以在派发前解析为稳定定位器。语义目标穿透开放 Shadow DOM，并排除可访问性隐藏祖先。CSS 保留仍有视觉像素的 `aria-hidden` 目标。原生命中测试会让接收指针事件的透明覆盖层形成阻挡，也会让 `pointer-events: none` 覆盖层穿透。

| 错误码                                          | 边界                                           |
| ----------------------------------------------- | ---------------------------------------------- |
| `test.spec.in_viewport_target_unstable`         | ACL 目标是浏览器 ref 或 visual point           |
| `test.spec.viewport_coverage_target_unstable`   | ACL 覆盖率目标是浏览器 ref 或 visual point     |
| `test.spec.viewport_coverage_threshold_trivial` | ACL 阈值会让覆盖率断言恒真                     |
| `test.spec.viewport_coverage_percent_limit`     | ACL 覆盖率百分比大于 100                       |
| `test.spec.pointer_reachable_target_unstable`   | ACL 目标是浏览器 ref 或 visual point           |
| `test.driver.web.target_not_found`              | 稳定目标没有合格匹配                           |
| `test.driver.web.target_ambiguous`              | 稳定目标存在多个合格匹配                       |
| `test.driver.web.target_invalid`                | CSS selector 非法                              |
| `test.driver.web.output_invalid`                | 矩形、样本数量、顺序、坐标、类型或响应信封畸形 |
| `test.driver.web.interactability_unsupported`   | 浏览器没有提供必需的命中测试能力               |
| `test.assert.in_viewport`                       | 合法目标矩形与 visual viewport 没有正面积相交  |
| `test.assert.viewport_coverage_at_least`        | 独立重算的合法覆盖率低于最低阈值               |
| `test.assert.viewport_coverage_at_most`         | 独立重算的合法覆盖率高于最高阈值               |
| `test.assert.pointer_reachable`                 | 没有合格样本命中目标或 composed-tree 后代      |
| `test.assert.unstable`                          | 初次通过后，后续稳定性样本违反断言             |

通过的 viewport 载荷包含两个矩形和独立重算的比例。覆盖率载荷还包含 `actual_percent`、`comparison`、`threshold_percent` 与 `matched`。通过的 pointer 载荷还包含全部九个有序样本坐标与布尔值，以及 `sample_count` 和 `reachable_samples`。GUI 与 TUI 的当前协议没有等价证据，因此明确关闭失败。当前检入证据覆盖 1,000/1,000 个基础 Core 几何案例与 2,000/2,000 个阈值案例、4,000/4,000 个 Web 协议分类、300/300 个持续窗口与 300/300 个瞬态窗口，以及 standalone Chromium 中 37 个通过断言和 25 个负向或驱动错误分类，并完成精确清理。

### ACL 隐藏断言

`hidden` 断言稳定目标定位器在当前观察中没有可见匹配。目标不存在，或匹配元素没有渲染出的可见边界，都满足条件。

```acl
expect "dialog-closed" {
    hidden = role("dialog", "Checkout")
}
```

ACL 编译器保存现有的 `Action::Assert(Expectation::Visible(target))`，并增加由 Runner 负责的隐藏模式。这个策略不会增加 Action 变体；当前协议已推进到修订 15，是因为上面的类型化 expectation。Runner 派发正向可见性探测，再按以下契约分类。

| 探测结果                    | 步骤结果                                                          |
| --------------------------- | ----------------------------------------------------------------- |
| 返回可见输出                | `test.assert.hidden`，记录 `visible = true`，正向输出位于 `probe` |
| 返回 `test.assert.visible`  | 通过，记录 `visible = false`，错误码与消息位于 `probe_error`      |
| 其他 `test.driver.*` 或错误 | 保留原始错误，定位或基础设施失败不能证明界面隐藏                  |

通过步骤会在 `output.data` 下给出以下稳定结构。

```json
{
  "expected": "hidden",
  "visible": false,
  "target": {
    "type": "role",
    "role": "dialog",
    "name": "Checkout"
  },
  "probe_error": {
    "code": "test.assert.visible",
    "message": "target is not visible"
  }
}
```

请使用所选 surface 支持的语义或 CSS 定位器。`ref()` 与 `visual_point()` 会在准入时失败，因为两者绑定某次观察，解析失败可能只是数据过期，不能证明界面隐藏。Web 支持其语义与 CSS 可见性目标。GUI 支持已准入的语义目标，并把过期或歧义匹配保留为驱动错误。TUI 当前不支持目标可见性断言。

| 错误码                             | 含义                                        |
| ---------------------------------- | ------------------------------------------- |
| `test.spec.hidden_target_unstable` | ACL 使用了绑定观察的 ref 或 visual point    |
| `test.assert.hidden`               | 正向探测发现可见目标                        |
| `test.run.assertion_mode_invalid`  | 程序化 suite 把隐藏模式附在非法动作或目标上 |

`expect hidden` 是立即断言。产品要求持续隐藏时，可组合 `stable_for_ms`。后续采样又发现目标可见时返回 `test.assert.unstable`，同时保留第一次隐藏观察和可见反例。目标消失本身就是同步条件时，使用下面的等待形式。

### ACL 隐藏等待

```acl
wait "dialog-closed" {
    hidden = role("dialog", "Checkout")
}
```

编译器保存现有的可见目标等待条件，并增加 `wait_mode = hidden`；在当前修订 15 下，它仍然复用早先的可见性 Action 变体。只要正向探测仍返回可见证据，Runner 就先立即执行一次只读可见性断言，再每 50 ms 探测一次。

| 边界                     | 结果                                                                   |
| ------------------------ | ---------------------------------------------------------------------- |
| 目标已经隐藏或不存在     | 一次探测后通过，不等待间隔                                             |
| 目标随后隐藏             | 第一次收到 `test.assert.visible` 不匹配时通过                          |
| 到场景 deadline 仍然可见 | `timed_out`、`test.run.timeout`、退出码 124，并保留最近可见反证        |
| 运行被取消               | `cancelled`、`test.run.cancelled`、退出码 130，执行有界清理并保留反证  |
| 达到 1,201 次探测        | 以 `test.run.hidden_wait_probe_limit` 失败                             |
| 驱动、过期或歧义错误     | 保留原始错误并记录 `wait.outcome = inconclusive`，绝不转换为目标已消失 |
| 程序化策略或目标不匹配   | 派发前返回 `test.run.wait_mode_invalid`                                |

延迟后匹配的等待会在 `output.data` 中给出以下稳定结构：

```json
{
  "expected": "hidden",
  "visible": false,
  "first_visible": { "visible": true },
  "last_visible": { "visible": true },
  "probe_error": {
    "code": "test.assert.visible",
    "message": "target is not visible"
  },
  "wait": {
    "condition": "hidden",
    "outcome": "matched",
    "poll_interval_ms": 50,
    "max_probes": 1201,
    "probes": 3,
    "observed_ms": 101
  }
}
```

`probes` 统计逻辑观察次数。步骤 `attempts` 统计驱动派发次数，只有已准入的可重试基础设施故障才可能让后者更大。普通 suite 与 agent run 的确定性验证使用同一套 Runner 策略。

### ACL 稳定窗口断言

`stable_for_ms` 为 ACL 的 `expect` 增加有界采样策略。文本、精确 URL、目标可见性和目标隐藏断言都能使用；前提是所选 surface 驱动支持底层 expectation。它不会增加新的动作类型，也不会改变驱动契约。

```acl
expect "settled-total" {
    visible = testid("order-total")
    stable_for_ms = 300
    sample_interval_ms = 25
}
```

| 字段                 | 是否必需   | 准入范围                   | 默认值                    |
| -------------------- | ---------- | -------------------------- | ------------------------- |
| `stable_for_ms`      | 启用时必需 | 10 至 60,000 ms 的整数     | 不启用稳定采样            |
| `sample_interval_ms` | 否         | 正整数，且不得大于稳定窗口 | 50 ms；窗口更短时等于窗口 |

计划工作量按 `ceil(stable_for_ms / sample_interval_ms) + 1` 计算，包含第一次观察。超过 1,001 个计划样本会在准入时被拒绝。Runner 只在第一次采样通过后启动计时，并在请求窗口的末端一定执行一次采样。

稳定步骤保留常规步骤字段，并在 `output.data` 下增加以下数据。

| JSON 路径                      | 含义                                                             |
| ------------------------------ | ---------------------------------------------------------------- |
| `assertion.first`              | 第一次成功采样的驱动数据                                         |
| `assertion.last`               | 最后一次或失败采样的驱动数据；驱动只返回错误时可以是 `null`      |
| `stability.outcome`            | `passed`、`unstable` 或 `inconclusive`                           |
| `stability.required_ms`        | 请求的稳定窗口                                                   |
| `stability.sample_interval_ms` | 准入后的采样间隔                                                 |
| `stability.samples`            | 已完成的观察点数量，包含第一次采样                               |
| `stability.observed_ms`        | 第一次成功采样后的实际耗时；受调度和驱动耗时影响，可以大于请求值 |
| 步骤 `attempts`                | 全部驱动调用次数；启用基础设施重试时可以大于 `samples`           |

第一次采样为假时保留原始断言错误码。后续采样为假时使用 `test.assert.unstable`。超时和取消仍是终止性的 `test.run.*` 结果；采样没有完成时可以不带 stability payload。

| 错误码                                       | 含义                                                 |
| -------------------------------------------- | ---------------------------------------------------- |
| `test.spec.type` 或 `test.spec.number_range` | 时长或间隔不是正整数                                 |
| `test.spec.stability_duration_required`      | 只配置了间隔，没有配置窗口                           |
| `test.spec.stability_range`                  | 窗口不在 10 至 60,000 ms 内                          |
| `test.spec.stability_interval`               | 间隔大于窗口                                         |
| `test.spec.stability_sample_limit`           | 计划样本超过 1,001                                   |
| `test.assert.unstable`                       | 第一次采样通过，但之后的采样为假                     |
| `test.run.stability_action_invalid`          | 程序化 suite 把稳定策略附在非断言动作上              |
| `test.run.stability_invalid`                 | 程序化 suite 绕过了准入边界                          |
| `test.run.stability_output_invalid`          | 程序化驱动为采样断言返回了不应出现的 advisory report |

## JSON 与错误契约

自动化调用应统一传入 `--json`，读取稳定错误码、状态和结构化字段，避免解析面向人的帮助文本。常见错误范围如下。

| 范围             | 归属                             |
| ---------------- | -------------------------------- |
| `test.spec.*`    | ACL、配置、target 或路径准入     |
| `test.driver.*`  | surface adapter、协议和生命周期  |
| `test.assert.*`  | 产品实际状态与期望不符           |
| `test.run.*`     | deadline、取消、调度和清理       |
| `test.session.*` | 持久会话、Repair Ledger 和 lease |

完整处理方法见[故障排查](../guide/troubleshooting.mdx)。全部功能与权限边界见[能力参考](./capabilities.mdx)。

## 退出码

| 退出码 | 含义                                 |
| -----: | ------------------------------------ |
|    `0` | 通过                                 |
|    `1` | 测试或动作失败                       |
|    `2` | 调用或配置无效，或分布式基础设施失败 |
|  `124` | 超时                                 |
|  `130` | 已取消                               |

第一次 `Ctrl+C` 请求取消并清理自有界面。第二次只终止当前进程拥有的浏览器、CUA 进程边界和 TUI 进程树。

## Web 能力摘要

Web 驱动支持导航、语义快照、点击、悬停、聚焦、填写与输入、选择范围文本插入、勾选、选择、双击、右键、拖动、按键、修饰键滚轮与视口设置。同步操作包括 load、文本、URL、正向可见性、有界消失等待、精确或范围焦点归属、实时展开/按压/只读/必填/有效性状态，以及正向或隐藏断言。证据包括截图、可访问树、console、页面错误、HAR、Chrome trace、WebM 视频和受约束下载。

浏览器默认 headless，`--headed` 是明确的调试选项。网络和导航范围分别受初始 origin、`--allow-origin` 与显式 hostname 例外约束。
